name plates no longer shrink unevenly

--- a/src/ components/EditRoster.css
+++ b/src/ components/EditRoster.css
@@ -1,60 +1,3 @@
-.rosterLine:first-child .hour{
-	transform: translate(0, -50px);
-	color: rgba(0, 0, 0, 1);
-}
-
-.rosterLine {
-	float: left;
-	display: flex;
-}
-
-.hourBlock {
-	color: rgba(0, 0, 0, 0);
-  background-color: white;
-  height: 60px;
-  width: 80px;
-	border-color: black;
-  border-style: solid;
-  border-width: 1px;
-	flex-grow: 1;
-}
-
-.nameContainer {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.namePlate {
-	display: inline-block;
-	width: 8vw;
-	flex-shrink: 1;
-}
-
-.rosteredHour {
-	color: rgba(0, 0, 0, 0);
-  background-color: rgb(55, 55, 59);
-  height: 60px;
-  width: 80px;
-	border-color: black;
-  border-style: solid;
-  border-width: 1px;
-	flex-grow: 1;
-	flex-shrink: 1;
-}
-
-
-.rosteredHour:hover {
-	cursor: pointer;
-}
-
-
-.hourSelector {
-	width: 4em;
-	flex-shrink: 0;
-}
-
 .publishContainer {
 	width: 100%;
 }
